# octorules-wirefilter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  scheme.rs  visitor.rs
tests/: test_parse.py
