[package]
name = "octorules-wirefilter"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Wirefilter expression parser FFI bindings for octorules"
authors = ["Martin Simon", "Doctena S.A."]
repository = "https://github.com/doctena-org/octorules-wirefilter"
homepage = "https://github.com/doctena-org/octorules-wirefilter"
keywords = ["cloudflare", "wirefilter", "parser", "ffi"]
categories = ["parser-implementations", "api-bindings"]
rust-version = "1.86"
exclude = [".github/", "tests/"]

[lib]
name = "octorules_wirefilter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
# Pinned to specific commit: SchemeBuilder and function registration APIs
# are not in the published crates.io wirefilter-engine v0.7.0.
wirefilter-engine = { git = "https://github.com/cloudflare/wirefilter", rev = "6621924baf36f8ba7f603433dbe6f857ad3d5589" }
