[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "octorules-wirefilter"
dynamic = ["version"]
description = "Wirefilter expression parser FFI bindings for octorules"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Martin Simon" },
    { name = "Doctena S.A." },
]
keywords = ["cloudflare", "wirefilter", "parser", "ffi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Repository = "https://github.com/doctena-org/octorules-wirefilter"
Issues = "https://github.com/doctena-org/octorules-wirefilter/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
