[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "octorules-wirefilter"
dynamic = ["version"]
description = "Wirefilter expression parser FFI bindings for octorules"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Martin Simon" },
    { name = "Doctena S.A." },
]
keywords = ["cloudflare", "wirefilter", "parser", "ffi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
]

[project.urls]
Repository = "https://github.com/doctena-org/octorules-wirefilter"
Issues = "https://github.com/doctena-org/octorules-wirefilter/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
